// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppleSimUtils appleSimUtils setPermissions 1`] = `
Array [
  Array [
    "applesimutils",
    Object {
      "args": "--simulator bundle.id --bundle 9C9ABE4D-70C7-49DC-A396-3CB1D0E82846 --setPermissions permissions=[object Object]",
    },
    Object {
      "successful": "Permissions are set",
      "trying": "Trying to set permissions...",
    },
    1,
    undefined,
  ],
]
`;

exports[`AppleSimUtils boot boots with xcrun simctl boot when xcode version >= 9 1`] = `
Array [
  Array [
    "/usr/bin/xcrun simctl boot udid",
    Object {
      "silent": false,
    },
    Object {
      "trying": "Booting device udid",
    },
    10,
  ],
  Array [
    "/usr/bin/xcrun simctl bootstatus udid",
    Object {
      "silent": false,
    },
    Object {},
    1,
  ],
]
`;

exports[`AppleSimUtils boot waits for device by udid to be Shutdown, boots magically, then waits for state to be Booted 1`] = `
Array [
  Array [
    "/bin/bash -c '\`xcode-select -p\`/Applications/Simulator.app/Contents/MacOS/Simulator --args -CurrentDeviceUDID some-udid -ConnectHardwareKeyboard 0 -DeviceSetPath $HOME/Library/Developer/CoreSimulator/Devices > /dev/null 2>&1 < /dev/null &'",
    undefined,
    Object {
      "trying": "Launching device some-udid...",
    },
    1,
  ],
  Array [
    "/usr/bin/xcrun simctl bootstatus some-udid",
    Object {
      "silent": false,
    },
    Object {},
    1,
  ],
]
`;

exports[`AppleSimUtils create calls xcrun to get a list of runtimes/devicetypes/devices 1`] = `
Array [
  Array [
    "/usr/bin/xcrun simctl list -j",
    Object {
      "silent": false,
    },
    Object {},
    1,
  ],
  Array [
    "/usr/bin/xcrun simctl create \\"iPhone X-Detox\\" \\"com.apple.CoreSimulator.SimDeviceType.iPhone-X\\" \\"com.apple.CoreSimulator.SimRuntime.iOS-11-3\\"",
    Object {
      "silent": false,
    },
    Object {},
    1,
  ],
]
`;

exports[`AppleSimUtils findDeviceUDID adapted to new api with optional OS 1`] = `
Array [
  Array [
    "applesimutils",
    Object {
      "args": "--list --byType \\"iPhone 6\\" --byOS \\"iOS 10.3\\"",
    },
    Object {
      "trying": "Searching for device matching iPhone 6 , iOS 10.3...",
    },
    1,
    undefined,
  ],
]
`;

exports[`AppleSimUtils getLogsPaths returns correct paths 1`] = `
Object {
  "stderr": "/Users/detox/Library/Developer/CoreSimulator/Devices/123/data/tmp/detox.last_launch_app_log.err",
  "stdout": "/Users/detox/Library/Developer/CoreSimulator/Devices/123/data/tmp/detox.last_launch_app_log.out",
}
`;

exports[`AppleSimUtils getXcodeVersion returns xcode major version 1`] = `
Array [
  Array [
    "xcodebuild -version",
    undefined,
    undefined,
    1,
  ],
]
`;

exports[`AppleSimUtils install calls xcrun 1`] = `
Array [
  Array [
    "/usr/bin/xcrun simctl install udid \\"somePath\\"",
    Object {
      "silent": false,
    },
    Object {
      "successful": "somePath installed",
      "trying": "Installing somePath...",
    },
    2,
  ],
]
`;

exports[`AppleSimUtils launch appends language and locale flags 1`] = `
Array [
  Array [
    "/bin/cat /dev/null >/Users/detox/Library/Developer/CoreSimulator/Devices/udid/data/tmp/detox.last_launch_app_log.out 2>/Users/detox/Library/Developer/CoreSimulator/Devices/udid/data/tmp/detox.last_launch_app_log.err && SIMCTL_CHILD_DYLD_INSERT_LIBRARIES=\\"undefined/Detox\\" /usr/bin/xcrun simctl launch --stdout=/tmp/detox.last_launch_app_log.out --stderr=/tmp/detox.last_launch_app_log.err udid theBundleId --args  -AppleLanguages \\"(es-MS)\\" -AppleLocale en-US",
    undefined,
    Object {
      "successful": "theBundleId launched. The stdout and stderr logs were recreated, you can watch them with:
        tail -F /Users/detox/Library/Developer/CoreSimulator/Devices/udid/data/tmp/detox.last_launch_app_log.{out,err}",
      "trying": "Launching theBundleId...",
    },
    1,
  ],
]
`;

exports[`AppleSimUtils launch asks environment for frameworkPath 1`] = `
Array [
  Array [
    "/bin/cat /dev/null >/Users/detox/Library/Developer/CoreSimulator/Devices/udid/data/tmp/detox.last_launch_app_log.out 2>/Users/detox/Library/Developer/CoreSimulator/Devices/udid/data/tmp/detox.last_launch_app_log.err && SIMCTL_CHILD_DYLD_INSERT_LIBRARIES=\\"thePathToFrameworks/Detox\\" /usr/bin/xcrun simctl launch --stdout=/tmp/detox.last_launch_app_log.out --stderr=/tmp/detox.last_launch_app_log.err udid theBundleId --args ",
    undefined,
    Object {
      "successful": "theBundleId launched. The stdout and stderr logs were recreated, you can watch them with:
        tail -F /Users/detox/Library/Developer/CoreSimulator/Devices/udid/data/tmp/detox.last_launch_app_log.{out,err}",
      "trying": "Launching theBundleId...",
    },
    1,
  ],
]
`;

exports[`AppleSimUtils launch concats args 1`] = `
Array [
  Array [
    "/bin/cat /dev/null >/Users/detox/Library/Developer/CoreSimulator/Devices/udid/data/tmp/detox.last_launch_app_log.out 2>/Users/detox/Library/Developer/CoreSimulator/Devices/udid/data/tmp/detox.last_launch_app_log.err && SIMCTL_CHILD_DYLD_INSERT_LIBRARIES=\\"undefined/Detox\\" /usr/bin/xcrun simctl launch --stdout=/tmp/detox.last_launch_app_log.out --stderr=/tmp/detox.last_launch_app_log.err udid theBundleId --args foo bar bob yourUncle",
    undefined,
    Object {
      "successful": "theBundleId launched. The stdout and stderr logs were recreated, you can watch them with:
        tail -F /Users/detox/Library/Developer/CoreSimulator/Devices/udid/data/tmp/detox.last_launch_app_log.{out,err}",
      "trying": "Launching theBundleId...",
    },
    1,
  ],
]
`;

exports[`AppleSimUtils launch launches magically 1`] = `
Array [
  Array [
    "/bin/cat /dev/null >/Users/detox/Library/Developer/CoreSimulator/Devices/udid/data/tmp/detox.last_launch_app_log.out 2>/Users/detox/Library/Developer/CoreSimulator/Devices/udid/data/tmp/detox.last_launch_app_log.err && SIMCTL_CHILD_DYLD_INSERT_LIBRARIES=\\"undefined/Detox\\" /usr/bin/xcrun simctl launch --stdout=/tmp/detox.last_launch_app_log.out --stderr=/tmp/detox.last_launch_app_log.err udid theBundleId --args ",
    undefined,
    Object {
      "successful": "theBundleId launched. The stdout and stderr logs were recreated, you can watch them with:
        tail -F /Users/detox/Library/Developer/CoreSimulator/Devices/udid/data/tmp/detox.last_launch_app_log.{out,err}",
      "trying": "Launching theBundleId...",
    },
    1,
  ],
]
`;

exports[`AppleSimUtils openUrl calls xcrun simctl 1`] = `
Array [
  Array [
    "/usr/bin/xcrun simctl openurl theUdid someUrl",
    Object {
      "silent": false,
    },
    Object {},
    1,
  ],
]
`;

exports[`AppleSimUtils recordVideo spawns simctl process with recordVideo command 1`] = `
Array [
  Array [
    "/usr/bin/xcrun",
    Array [
      "simctl",
      "io",
      "30A234FD-2372-4757-A76B-E375C8C43A54",
      "recordVideo",
      "/tmp/video.mp4",
    ],
  ],
]
`;

exports[`AppleSimUtils resetContentAndSettings shutdown, simctl erase, then boot 1`] = `
Array [
  Array [
    "/usr/bin/xcrun simctl erase theUdid",
    Object {
      "silent": false,
    },
    Object {},
    1,
  ],
]
`;

exports[`AppleSimUtils sendToHome calls xcrun 1`] = `
Array [
  Array [
    "/usr/bin/xcrun simctl launch theUdid com.apple.springboard",
    Object {
      "silent": false,
    },
    Object {},
    10,
  ],
]
`;

exports[`AppleSimUtils setLocation calls fbsimctl set_location 1`] = `
Array [
  Array [
    "which fbsimctl",
    undefined,
    undefined,
    1,
  ],
  Array [
    "fbsimctl theUdid set_location 123.456 789.123",
    undefined,
    undefined,
    1,
  ],
]
`;

exports[`AppleSimUtils setLocation throws when no fbsimctl installed 1`] = `
Array [
  Array [
    "which fbsimctl",
    undefined,
    undefined,
    1,
  ],
]
`;

exports[`AppleSimUtils shutdown calls xcrun simctl 1`] = `
Array [
  Array [
    "/usr/bin/xcrun simctl shutdown theUdid",
    Object {
      "silent": false,
    },
    Object {
      "successful": "theUdid shut down",
      "trying": "Shutting down theUdid...",
    },
    1,
  ],
]
`;

exports[`AppleSimUtils takeScreenshot executes simctl screenshot command 1`] = `
Array [
  Array [
    "/usr/bin/xcrun simctl io FBD9308E-33CC-4E43-92AD-FA7E1C06851A screenshot \\"/tmp/screenshot.png\\"",
    Object {
      "silent": false,
    },
    Object {},
    1,
  ],
]
`;

exports[`AppleSimUtils takeScreenshot executes simctl screenshot command silently (if dest is /dev/null) 1`] = `
Array [
  Array [
    "/usr/bin/xcrun simctl io FBD9308E-33CC-4E43-92AD-FA7E1C06851A screenshot \\"/dev/null\\"",
    Object {
      "silent": true,
    },
    Object {},
    1,
  ],
]
`;

exports[`AppleSimUtils terminate calls xcrun simctl 1`] = `
Array [
  Array [
    "/usr/bin/xcrun simctl terminate theUdid thebundleId",
    Object {
      "silent": false,
    },
    Object {
      "successful": "thebundleId terminated",
      "trying": "Terminating thebundleId...",
    },
    1,
  ],
]
`;

exports[`AppleSimUtils uninstall calls xcrun 1`] = `
Array [
  Array [
    "/usr/bin/xcrun simctl uninstall udid theBundleId",
    Object {
      "silent": false,
    },
    Object {
      "successful": "theBundleId uninstalled",
      "trying": "Uninstalling theBundleId...",
    },
    1,
  ],
]
`;
